--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "changes": "git fetch origin develop && git pull origin develop"
+    "changes": "npm i && git fetch origin develop && git pull origin develop"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
