--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
     "changes": "git fetch origin develop && git pull origin develop && npm i"
   },
   "dependencies": {
-    "@fullcalendar/core": "^6.1.15",
-    "@fullcalendar/daygrid": "^6.1.15",
-    "@fullcalendar/react": "^6.1.15",
-    "@heroicons/react": "^2.1.5",
+    "@fullcalendar/core": "6.1.15",
+    "@fullcalendar/daygrid": "6.1.15",
+    "@fullcalendar/react": "6.1.15",
+    "@heroicons/react": "2.1.5",
     "axios": "1.7.4",
-    "bootstrap": "^5.3.3",
-    "react": "^18.3.1",
-    "react-bootstrap": "^2.10.4",
-    "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
-    "react-modal": "^3.16.1",
-    "react-router-dom": "^6.26.0",
-    "sweetalert": "^2.1.2"
+    "bootstrap": "5.3.3",
+    "react": "18.3.1",
+    "react-bootstrap": "2.10.4",
+    "react-dom": "18.3.1",
+    "react-icons": "5.3.0",
+    "react-modal": "3.16.1",
+    "react-router-dom": "6.26.0",
+    "sweetalert": "2.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
