--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
     "@fullcalendar/react": "6.1.15",
     "@heroicons/react": "2.1.5",
     "axios": "1.7.4",
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "bootstrap": "5.3.3",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.12.0",
     "react": "18.3.1",
     "react-bootstrap": "2.10.4",
     "react-dom": "18.3.1",
