--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@heroicons/react": "2.1.5",
     "axios": "1.7.4",
     "bootstrap": "5.3.3",
+    "dotenv": "16.4.5",
     "react": "18.3.1",
     "react-bootstrap": "2.10.4",
     "react-dom": "18.3.1",
