--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fullcalendar/daygrid": "6.1.15",
     "@fullcalendar/react": "6.1.15",
     "@heroicons/react": "2.1.5",
+    "@uidotdev/usehooks": "^2.4.1",
     "axios": "1.7.4",
     "bootstrap": "5.3.3",
     "react": "18.3.1",
