--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "1.7.4",
     "bootstrap": "5.3.3",
+    "js-cookie": "^3.0.5",
+    "list": "^2.0.19",
+    "prop-types": "^15.8.1",
     "react": "18.3.1",
     "react-bootstrap": "2.10.4",
     "react-dom": "18.3.1",
