--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,4 +29,5 @@ jobs:
       with:
         cache: 'npm'
     - run: npm i --no-fund --no-audit
-    - run: npm run dev
+    - run: npm run lint
+    - run: npm run build
