--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "1.7.4",
     "bootstrap": "5.3.3",
+    "chart.js": "4.4.4",
     "react": "18.3.1",
     "react-bootstrap": "2.10.4",
+    "react-chartjs-2": "5.2.0",
     "react-dom": "18.3.1",
     "react-icons": "5.3.0",
     "react-modal": "3.16.1",
