routes to role without validate

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,10 +3,17 @@
     "tasks": [
         {
             "type": "npm",
+            "script": "lint",
+            "runOptions": {
+                "runOn": "folderOpen"
+            }
+        },
+        {
+            "type": "npm",
             "script": "changes",
             "runOptions": {
                 "runOn": "folderOpen"
             }
-        }
+        },
     ]
 } 
