--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "18.3.1",
     "react-icons": "5.3.0",
     "react-modal": "3.16.1",
+    "react-multistep": "^5.5.9",
     "react-router-dom": "6.26.0",
     "sweetalert": "2.1.2"
   },
