--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,6 +28,6 @@ jobs:
     - uses: actions/setup-node@v4
       with:
         cache: 'npm'
-    - run: npm i --no-fund --no-audit
+    - run: npm i --no-fund --no-audit --legacy-peer-deps
     - run: npm run lint
     - run: npm run build
