--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@fullcalendar/core": "6.1.15",
     "@fullcalendar/daygrid": "6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/react": "6.1.15",
     "@heroicons/react": "2.1.5",
     "@uidotdev/usehooks": "2.4.1",
